feat: app usage history
