# src/server/controllers/users.ts
@@ -1,8 +1,11 @@
 import { Request, Response, Router } from 'express'
 import { AsyncHandlerResponse } from '../types'
 import { BaseController } from './base'
-import { subscription as subsRepo } from '../../models'
-import { authenticated, isSelf, asyncWrap as aw } from '../middleware/'
+import {
+  subscription as subsRepo,
+  history as historyRepo,
+} from '../../models'
+import { authenticated, isSelf, asyncWrap as aw, isAdmin } from '../middleware/'
 
 export class UsersController implements BaseController {
   private readonly path = '/users'
@@ -12,6 +15,7 @@ export class UsersController implements BaseController {
     router.get(`${this.path}/:id/subscriptions`, authenticated, isSelf, aw(this.getUserSubscriptions))
     router.post(`${this.path}/:id/subscriptions/:appId`, authenticated, isSelf, aw(this.subscribeApp))
     router.delete(`${this.path}/:id/subscriptions/:appId`, authenticated, isSelf, aw(this.unsubscribeApp))
+    router.post(`${this.path}/:id/history/:appId`, authenticated, isAdmin, aw(this.recordAppHistory))
     return router
   }
 
@@ -41,5 +45,17 @@ export class UsersController implements BaseController {
     })
 
     return res.sendStatus(204)
+  }
+
+  public recordAppHistory = async (req: Request, res: Response): AsyncHandlerResponse => {
+    const hst = await historyRepo.create(null, {
+      userId: Number(req.params.id),
+      appId: Number(req.params.appId),
+      metadata: req.body
+    })
+
+    return res.status(201).json({
+      data: hst,
+    })
   }
 }
